<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_fragment_container"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/prev"
        android:textSize="30sp"
        android:width="15dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/search_fragment_container"
        android:textStyle="bold"
        android:text="@string/prev"
        android:background="@color/colorWhite"
        android:paddingBottom="2dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/toggle"
        android:textSize="40sp"
        android:width="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/search_fragment_container"
        android:textStyle="bold"
        android:text="@string/up"
        android:background="@color/colorWhite"
        android:paddingBottom="2dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/next"
        android:textSize="30sp"
        android:width="15dp"
        android:layout_below="@id/search_fragment_container"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:text="@string/next"
        android:background="@color/colorWhite"
        android:paddingBottom="2dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggle"
        android:id="@+id/list_fragment_container"/>

</RelativeLayout>
